Fix display of coverage results